[package]
name = "rety"
version = "0.1.0"
authors = ["Konrad Szymoniak <szymoniak.konrad@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.76"


[dependencies]
egui = "0.27.1"
egui_extras = "0.27.1"
eframe = { version = "0.27.1", default-features = false, features = [
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

serde = { version = "1", features = ["derive"] }
regex = "1.10.2"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
